<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/go_live"
        android:textColor="@color/black"
        android:textSize="@dimen/titel" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/driver"/>
        <Button
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/black"
            android:text="@string/user"/>
    </LinearLayout>
    <EditText
        android:id="@+id/tvGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text"
        android:drawablePadding="8dp"
        android:textSize="@dimen/textSize"
        android:drawableRight="@drawable/ic_search_black_24dp"
        android:drawableTint="@color/ic_color"
        android:hint="@string/main_search"
        android:padding="10dp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="left">
        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="@dimen/textSize"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/textSize"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>