<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="com.twins.sundus.osama.khodnyma3k.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:background="#55000000"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:padding="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_menu_black_24px" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:layout_gravity="center"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center"
                    android:textSize="@dimen/titel"
                    android:orientation="horizontal"
                    android:text="@string/titel"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/notifications"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:padding="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_notifications_black_24px" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/edPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:textSize="@dimen/textSize"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:drawableTint="@color/ic_color"
            android:hint="@string/main_search"
            android:padding="10dp"
            android:textColor="@color/black" />
    </RelativeLayout>
<ScrollView
    android:id="@+id/LinearLayout"
    android:layout_width="@dimen/nav_size"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/white"/>
        <Button
            android:id="@+id/go_to_live"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:text="@string/go_live"
            android:textSize="@dimen/titel"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
</android.support.v4.widget.DrawerLayout>
